--- a/app/src/main/res/layout/activity_drag_ndrop.xml
+++ b/app/src/main/res/layout/activity_drag_ndrop.xml
@@ -2,15 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
-    tools:context=".DessinActivity"
-    >
+    tools:context="com.tpandroid.nicolas.testcanvasapplication.DragNDropActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
     <com.tpandroid.nicolas.testcanvasapplication.util.Dessin
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-
 </FrameLayout>
