--- a/app/src/main/res/layout/activity_drag_ndrop.xml
+++ b/app/src/main/res/layout/activity_drag_ndrop.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.tpandroid.nicolas.testcanvasapplication.DragNDropActivity">
 
-    <com.tpandroid.nicolas.testcanvasapplication.util.Dessin
+    <com.tpandroid.nicolas.testcanvasapplication.util.DragnDrop
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </FrameLayout>
