--- a/app/src/main/res/menu/drag_ndrop.xml
+++ b/app/src/main/res/menu/drag_ndrop.xml
@@ -1,8 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.tpandroid.nicolas.testcanvasapplication.DragNDropActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <item
+        android:id="@+id/menu_dragdrop"
+        android:icon="@drawable/ic_launcher"
+        android:showAsAction="never"
+        android:title="@string/dragndrop" />
+    <item
+        android:id="@+id/menu_draw"
+        android:showAsAction="never"
+        android:title="@string/dessin" />
 </menu>
